Fixed blog posts disappearing on refresh and removed footer size so that the padding no longer forces a second vertical scrollbar

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -53,7 +53,6 @@ footer {
   flex-flow: column nowrap;
   justify-content: space-around;
   color: #162a3e;
-  height: 160px;
   align-items: center;
 }
 
